WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
317472
[Wasm] BBQ `ControlData::m_tryTableTargets` should not have inline capacity
https://bugs.webkit.org/show_bug.cgi?id=317472
Summary
[Wasm] BBQ `ControlData::m_tryTableTargets` should not have inline capacity
Sosuke Suzuki
Reported
2026-06-18 22:42:38 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-06-18 22:45:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/67499
EWS
Comment 2
2026-06-19 02:33:03 PDT
Committed
315526@main
(96d0619b3aa0): <
https://commits.webkit.org/315526@main
> Reviewed commits have been landed. Closing PR #67499 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-19 02:34:14 PDT
<
rdar://problem/180111291
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug