[Wasm] BBQ `ControlData::m_tryTableTargets` should not have inline capacity https://bugs.webkit.org/show_bug.cgi?id=317472

Reviewed by Yusuke Suzuki.

BBQ ControlData stores m_tryTableTargets as Vector<TryTableTarget, 8>, paying
192 bytes of inline storage in every ControlData regardless of block kind.
try_table is rare, so almost every Block/Loop/If/Try entry on the control
stack carries 192 bytes that are never touched. OMG and IPInt already keep
this member at inline capacity 0; align BBQ with them by using the existing
TargetList alias. addTryTable already builds a TargetList and moves it in,
so the try_table path is unchanged.

sizeof(ControlData): 392 -> 200 bytes.

* Source/JavaScriptCore/wasm/WasmBBQJIT.h:

Canonical link: https://commits.webkit.org/315526@main